# agile-assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  debug.txt  docker-compose.yml  eval_output.txt  eval_output_best_result_v2.txt  eval_output_token_usage.txt  eval_output_v10.txt  eval_output_v13.txt  eval_output_v6.txt  eval_output_v7.txt  pyproject.toml  supervisor_output_v2.txt  supervisor_output_v6.txt
.github/workflows/: test.yml
agile_assistant/: config.py  main.py  tracing.py
agile_assistant/agents/: entity_sanitizer.py  rag_agent.py  response_agent.py  schema_loader.py  sql_agent.py  sql_tools.py  supervisor.py  validator_agent.py
agile_assistant/api/: __init__.py  app.py  dependencies.py
agile_assistant/database/: connection.py  load_csv.py  task_repository.py
agile_assistant/graph/: state.py  workflow.py
agile_assistant/llm/: client.py
agile_assistant/memory/: __init__.py  context_builder.py  conversation_repo.py  formatter.py  manager.py  profile_repo.py  summary_repo.py  truncator.py
agile_assistant/models/: __init__.py  memory.py
agile_assistant/observability/: logging.py
agile_assistant/rag/: embeddings.py  ingest.py  reranker.py  retriever.py  sparse.py
agile_assistant/tasks/: __init__.py  celery_app.py  judge_task.py  memory_tasks.py  sync_tasks.py  workflow_task.py
alembic/: env.py
alembic/versions/: 001_add_tasks_table.py  002_add_cleanup_function.py  003_add_conversations.py  004_add_user_profiles.py  005_add_conversation_id_to_tasks.py
database/: init-langfuse.sql  init.sql
database/data/: report_agile_dashboard.csv  report_agile_dashboard_metrics.csv
docs/: api.md  architecture.md  configuration.md  database.md  deployment.md  evaluation.md  guardrails.md  knowledge-base.md  kubernetes.md  local-development.md  memory.md  observability.md  ui.md
eval/: analyze_tokens.py  calibrate_topic_guard.py  compare.py  count_supervisor_tokens.py  golden_dataset.json  metrics.py  response_golden_dataset.json  run_eval.py  run_multiturn_eval.py  run_response_eval.py  run_sql_eval.py  run_supervisor_eval.py  spot_check.py  sql_golden_dataset.json  supervisor_golden_dataset.json
eval/llm_as_a_judge_experiments/: automatic_metrics_ipynb_.ipynb  llm_as_a_judge_experiment.ipynb
eval/results/: 8bit_500_200_k4_600_4n_prompt1_20260328_101649.json  8bit_500_200_k4_600_4n_prompt2_20260328_102508.json  8bit_500_200_n4_k4_thr001_600_t_prv3_20260329_061611.json  8bit_500_200_n4_k4_thr001_600_t_prv4_20260329_063832.json  8bit_500_200_n4_k4_thr001_600_title_20260329_060538.json  8bit_baseline_final_fixed_chunk_1000_200_k4_600_20260328_064334.json  8bit_dense_complicated_prompt_20260329_105331.json  8bit_dense_median_1_20260329_101900.json  8bit_dense_median_2_20260329_102731.json  8bit_dense_median_3_20260329_103350.json  8bit_dense_n4_k5_20260329_100254.json  8bit_fixed_chunk_1500_300_k4_600_20260328_073450.json  8bit_fixed_chunk_500_100_k4_600_20260328_070616.json  8bit_fixed_chunk_500_200_k4_600_20260328_071537.json  8bit_fixed_chunk_800_200_k4_600_20260328_072254.json  8bit_hybrid_ik20_rff60_n4_20260329_095104.json  8bit_reranker_500_200_k4_600_20260328_075623.json  8bit_reranker_500_200_k4_600_4n_20260328_080652.json  8bit_reranker_k4_600_4n_1500_300_20260328_084925.json  8bit_reranker_k4_600_4n_thr005_20260328_082343.json  8bit_reranker_k4_600_4n_thr01_20260328_081542.json  8bit_sparse_bm25_20260328_114816.json  8bit_w_table_20260329_080824.json  8bit_w_table_columns_20260329_082455.json  8bit_w_table_columns_fixed_20260329_083437.json  8bit_w_table_columns_fixed_20260329_092437.json  8bit_w_table_columns_fixed_vllmt0_20260329_094317.json  after_fix2_20260425_112010.json  after_fix_20260425_103831.json  bgem3_1024_dense_20260403_172459.json  bgem3_hybrid_20260403_173742.json  bgem3_sparse_20260403_173228.json  e5base_256_naive_20260403_145240.json  eval_output_best_result_v1.txt  eval_output_best_result_v3.txt  eval_output_v11.txt  eval_output_v12.txt  eval_output_v14.txt  eval_output_v15.txt  eval_output_v4.txt  (+80 more)
hse_prom_prog/: config.py  main.py  metrics.py  tracing.py
hse_prom_prog/agents/: entity_extractor.py  entity_sanitizer.py  rag_agent.py  response_agent.py  schema_description.py  schema_loader.py  sql_agent.py  sql_tools.py  supervisor.py  validator_agent.py
hse_prom_prog/api/: __init__.py  app.py  dependencies.py
hse_prom_prog/database/: connection.py  load_csv.py  task_repository.py
hse_prom_prog/graph/: state.py  workflow.py
hse_prom_prog/llm/: client.py
hse_prom_prog/memory/: __init__.py  context_builder.py  conversation_repo.py  formatter.py  manager.py  profile_extractor.py  profile_repo.py  summary_repo.py  token_estimator.py  truncator.py
hse_prom_prog/models/: __init__.py  memory.py  task.py
hse_prom_prog/rag/: __init__.py  bm25_index.py  embeddings.py  ingest.py  reranker.py  retriever.py  sparse.py  tokenizer.py
hse_prom_prog/tasks/: __init__.py  celery_app.py  judge_task.py  memory_tasks.py  sync_tasks.py  workflow_task.py
k8s/: Dockerfile.postgres  ingress.yaml  namespace.yaml
k8s/configmaps/: app-config.yaml  postgres-init.yaml
k8s/deployments/: api.yaml  celery-beat.yaml  celery-judge.yaml  celery-worker.yaml  postgres.yaml  qdrant.yaml  redis-exporter.yaml  redis.yaml  streamlit.yaml  vllm-sql.yaml  vllm.yaml
k8s/jobs/: migrate.yaml  postgres-load-data.yaml  qdrant-ingest.yaml
k8s/monitoring/: README.md  api-servicemonitor.yaml  celery-judge-servicemonitor.yaml  celery-worker-servicemonitor.yaml  kube-prometheus-stack-values.yaml  postgres-podmonitor.yaml  prometheus-rules.yaml  qdrant-servicemonitor.yaml  redis-exporter-servicemonitor.yaml  vllm-main-servicemonitor.yaml  vllm-sql-servicemonitor.yaml
k8s/secrets/: app-secrets.yaml  postgres-credentials.yaml
loadtest/: locustfile.py  run.sh
nginx/: Dockerfile.static  nginx.conf
scripts/: download_model.sh  verify_memory.sh
static/: style.css
streamlit_app/: api_client.py  app.py  auth.py  config.py
tests/: conftest.py  test_api_memory.py  test_memory.py  test_workflow.py
(+101 files in other folders)
