[project]
name = "hse-prom-prog"
version = "0.1.0"
description = "Add your description here"
packages = [{include = "hse_prom_prog"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.45",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "langgraph>=0.2.60",
    "langchain>=0.3.20",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.20",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.36",
    "tabulate>=0.9.0",
    # FastAPI and ASGI server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",
    # Celery and Redis
    "celery>=5.4.0",
    "redis>=5.2.0",
    # Database migrations
    "alembic>=1.14.0",
    # Streamlit frontend
    "streamlit>=1.40.0",
    "requests>=2.32.0",
    # RAG: Qdrant vector store + embeddings
    "langchain-qdrant>=0.2.0",
    "qdrant-client>=1.12.0",
    "langchain-huggingface>=0.1.0",
    "sentence-transformers>=3.0.0",
    "transformers>=4.45.0,<5",
    # Document loaders for ingestion
    "pypdf>=5.0.0",
    "pdfplumber>=0.11.0",
    # BM25 / learned sparse for hybrid search
    "rank-bm25>=0.2.2",
    "fastembed>=0.4.0",
    "FlagEmbedding>=1.2.0",
    # RAGAS evaluation framework
    "ragas>=0.2.0",
    "datasets>=3.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "ruff>=0.14.9",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
]

[tool.ruff]
line-length = 100
format = { docstring-code-format = true }

[tool.ruff.lint]
select = [
    # isort
    "I",
    # pycodestyle
    "E", "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8-builtins
    "A",
    # flake8-return
    "RET",
    # flake8-use-pathlib
    "PTH",
    # flynt
    "FLY",
    # mccabe
    "C90",
    # NumPy-specific rules
    "NPY",
    # pep8-naming
    "N",
    # Ruff-specific rules
    "RUF",
    # Pylint - very strict, may be use when have enough time
    "PL",
    # refurb - also may be overwhelming
    "FURB",
]

pycodestyle = { max-doc-length = 105 }

# RUF001: ambiguous unicode — project uses Russian (Cyrillic) strings intentionally
ignore = ["RUF001"]

[tool.ruff.lint.per-file-ignores]
# B008: FastAPI Depends() in function defaults is the standard pattern
"hse_prom_prog/api/routers/*.py" = ["B008"]
# PLR2004: magic values like `len(sys.argv) < 2` are standard CLI patterns
"hse_prom_prog/main.py" = ["PLR2004"]
# PLR2004, PLC0415: tests use magic values in assertions and local imports with @patch
"tests/*.py" = ["PLR2004", "PLC0415"]
"eval/*.py" = ["PLC0415", "PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["hse_prom_prog", "streamlit_app", "eval"]
